syntax = "proto3";
package prac;

service FirstController {
  rpc Hello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}
